WIP fixing experiment defautls

--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,38 +32,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "import json\n",
     "from functools import lru_cache\n",
     "from typing import Tuple\n",
     "\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from incense.artifact import CSVArtifact\n",
     "from incense.experiment import Experiment\n",
+    "from nbdev import Config\n",
     "from sciflow.utils import load_dremio_access\n",
     "from text_discovery.lake_experiment import LakeExperiment\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
     "from turbodbc.exceptions import DatabaseError\n",
-    "from nbdev import Config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "MAX_CACHE_SIZE = 32"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,22 +67,34 @@
     "    def __init__(\n",
     "        self,\n",
     "        experiment_name,\n",
-    "        experiments_key_prefix = None,\n",
-    "        dremio_access = None,\n",
-    "        bucket_name = None,\n",
-    "        bucket_table_alias = None\n",
+    "        experiments_key_prefix=None,\n",
+    "        dremio_access=None,\n",
+    "        bucket_name=None,\n",
+    "        bucket_table_alias=None,\n",
     "    ):\n",
     "        config = Config()\n",
     "        lib_name = config.lib_name\n",
     "        self.experiment_name = experiment_name\n",
-    "        self.dremio_access = load_dremio_access() if not dremio_access else dremio_access\n",
-    "        self.bucket_name = config.bucket if not bucket_name else bucket_name\n",
-    "        self.bucket_table_alias = config.bucket_table_alias if not bucket_table_alias else bucket_table_alias\n",
-    "        self.experiments_key_prefix = f'{lib_name}/experiments' if not experiments_key_prefix else experiments_key_prefix\n",
-    "        table_path = self.experiments_key_prefix.replace('/', '.')\n",
-    "        self.table_context = f'{self.bucket_table_alias}.{table_path}'\n",
-    "        self.remote_path = f'{self.bucket_name}/{self.experiments_key_prefix}/{self.experiment_name}'\n",
-    "        self.lake_table = f'{self.table_context}.{self.experiment_name}'\n",
+    "        self.dremio_access = (\n",
+    "            load_dremio_access() if dremio_access is None else dremio_access\n",
+    "        )\n",
+    "        self.bucket_name = config.bucket if bucket_name is None else bucket_name\n",
+    "        self.bucket_table_alias = (\n",
+    "            config.bucket_table_alias\n",
+    "            if bucket_table_alias is None\n",
+    "            else bucket_table_alias\n",
+    "        )\n",
+    "        self.experiments_key_prefix = (\n",
+    "            f\"{lib_name}/experiments\"\n",
+    "            if experiments_key_prefix is None\n",
+    "            else experiments_key_prefix\n",
+    "        )\n",
+    "        table_path = self.experiments_key_prefix.replace(\"/\", \".\")\n",
+    "        self.table_context = f\"{self.bucket_table_alias}.{table_path}\"\n",
+    "        self.remote_path = (\n",
+    "            f\"{self.bucket_name}/{self.experiments_key_prefix}/{self.experiment_name}\"\n",
+    "        )\n",
+    "        self.lake_table = f\"{self.table_context}.{self.experiment_name}\"\n",
     "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def _find(\n",
@@ -110,7 +117,7 @@
     "            query += f\" order by {order_by} desc\"\n",
     "        if limit:\n",
     "            query += f\" limit {limit}\"\n",
-    "        data = dremio_access.read_sql_to_dataframe(query)\n",
+    "        data = self.dremio_access.read_sql_to_dataframe(query)\n",
     "        experiments = [\n",
     "            LakeExperiment(\n",
     "                self.bucket_name,\n",
@@ -181,40 +188,46 @@
     "        self.find_by_ids.cache_clear()\n",
     "        self.find_by_name.cache_clear()\n",
     "        self.find_latest.cache_clear()\n",
-    "        \n",
+    "\n",
     "    def __repr__(self):\n",
-    "        return f'Experiment: {self.experiment_name}\\n' \\\n",
-    "                f'Remote Path: {self.remote_path}\\n' \\\n",
-    "                f'Lake Table: {self.lake_table}'"
+    "        return (\n",
+    "            f\"Experiment: {self.experiment_name}\\n\"\n",
+    "            f\"Remote Path: {self.remote_path}\\n\"\n",
+    "            f\"Lake Table: {self.lake_table}\"\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dremio_access = load_dremio_access() # default - load it\n",
-    "bucket_name = \"s3bawspprwe1chatbotunpub01\" # default = bucket\n",
-    "bucket_table_alias = 'chatbot_unpublish_s3'\n",
-    "experiments_key_prefix = \"discovery/experiments/test\" # default = lib_name/experiments\n",
-    "experiment_name = \"lake_observer\" # default should be flow name"
+    "dremio_access = load_dremio_access()  # default - load it\n",
+    "bucket_name = \"s3bawspprwe1chatbotunpub01\"  # default = bucket\n",
+    "bucket_table_alias = \"chatbot_unpublish_s3\"\n",
+    "experiments_key_prefix = \"discovery/experiments/test\"  # default = lib_name/experiments\n",
+    "experiment_name = \"lake_observer\"  # default should be flow name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "loader = LakeExpLoader(\n",
-    "    experiment_name, experiments_key_prefix, dremio_access, bucket_name, bucket_table_alias \n",
+    "    experiment_name,\n",
+    "    experiments_key_prefix,\n",
+    "    dremio_access,\n",
+    "    bucket_name,\n",
+    "    bucket_table_alias,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +238,7 @@
        "Lake Table: chatbot_unpublish_s3.discovery.experiments.test.lake_observer"
       ]
      },
-     "execution_count": 62,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,39 +249,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(loader.remote_path == 's3bawspprwe1chatbotunpub01/discovery/experiments/test/lake_observer')\n",
-    "assert(loader.lake_table == 'chatbot_unpublish_s3.discovery.experiments.test.lake_observer')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "missing_loader = LakeExpLoader(\n",
-    "    f'generated_experiment_name_{np.random.randint(10**5)}'\n",
+    "assert (\n",
+    "    loader.remote_path\n",
+    "    == \"s3bawspprwe1chatbotunpub01/discovery/experiments/test/lake_observer\"\n",
+    ")\n",
+    "assert (\n",
+    "    loader.lake_table == \"chatbot_unpublish_s3.discovery.experiments.test.lake_observer\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_loader = LakeExpLoader(f\"generated_experiment_name_{np.random.randint(10**5)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Experiment: generated_experiment_name_74285\n",
-       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_74285\n",
-       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_74285"
+       "Experiment: generated_experiment_name_3028\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_3028\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_3028"
       ]
      },
-     "execution_count": 65,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -289,17 +305,17 @@
       "ERROR IS: `ODBC error\n",
       "state: HY000\n",
       "native error code: 1040\n",
-      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from ra_s3.sciflow.experiments.generated_experiment_name_74285.runs\n",
+      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from ra_s3.sciflow.experiments.generated_experiment_name_3028.runs\n",
       "[30038]Query execution error. Details:[ \n",
-      "VALIDATION ERROR: Table 'ra_s3.sciflow.experiments.generated_experiment_name_74285.runs' not found\n",
+      "VALIDATION ERROR: Table 'ra_s3.sciflow.experiments.generated_experiment_name_3028.runs' not found\n",
       "\n",
-      "SQL Query select * from ra_s3.sciflow.experiments.generated_experiment_name_74285.runs\n",
+      "SQL Query select * from ra_s3.sciflow.experiments.generated_experiment_name_3028.runs\n",
       "startLine 1\n",
       "startColumn 15\n",
       "endLine 1\n",
       "endColumn 19\n",
       "\n",
-      "[Error Id: 57217...[see log]`\n"
+      "[Error Id: e10ace17...[see log]`\n"
      ]
     }
    ],
@@ -313,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,18 +489,6 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
