--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +54,7 @@
     "\n",
     "import boto3\n",
     "import pandas as pd\n",
+    "from nbdev import Config\n",
     "from sacred.dependencies import get_digest\n",
     "from sacred.observers.base import RunObserver\n",
     "from sacred.serializer import flatten\n",
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +88,12 @@
     "    VERSION = \"AWSLakeObserver-0.1.0\"\n",
     "\n",
     "    def __init__(\n",
-    "        self, bucket_name, experiment_dir, priority=DEFAULT_S3_PRIORITY, region=None,\n",
+    "        self,\n",
+    "        experiment_name,\n",
+    "        bucket_name=None,\n",
+    "        experiments_key_prefix=None,\n",
+    "        priority=DEFAULT_S3_PRIORITY,\n",
+    "        region=\"eu-west-1\",\n",
     "    ):\n",
     "        \"\"\"Constructor for a AWSLakeObserver object.\n",
     "\n",
@@ -87,10 +102,12 @@
     "\n",
     "        Parameters\n",
     "        ----------\n",
+    "        experiment_name\n",
+    "            The nme of this experiment\n",
     "        bucket_name\n",
     "            The name of the bucket you want to store results in.\n",
     "            Doesn't need to contain `s3://`, but needs to be a valid bucket name\n",
-    "        experiment_dir\n",
+    "        experiments_key_prefix\n",
     "            The relative path inside your bucket where you want this experiment to store results\n",
     "        priority\n",
     "            The priority to assign to this observer if\n",
@@ -99,11 +116,19 @@
     "            The AWS region in which you want to create and access\n",
     "            buckets. Needs to be either set here or configured in your AWS\n",
     "        \"\"\"\n",
-    "        if not is_valid_bucket(bucket_name):\n",
+    "        self.experiment_name = experiment_name\n",
+    "        config = Config()\n",
+    "        self.bucket_name = config.bucket if bucket_name is None else bucket_name\n",
+    "        if not is_valid_bucket(self.bucket_name):\n",
     "            raise ValueError(\n",
     "                \"Your chosen bucket name doesn't follow AWS bucket naming rules\"\n",
     "            )\n",
-    "        self.experiment_dir = experiment_dir\n",
+    "        self.experiments_key_prefix = (\n",
+    "            f\"{config.lib_name}/experiments\"\n",
+    "            if experiments_key_prefix is None\n",
+    "            else experiments_key_prefix\n",
+    "        )\n",
+    "        self.experiments_key = s3_join(self.experiments_key_prefix, self.experiment_name)\n",
     "        self.bucket_name = bucket_name\n",
     "        self.priority = priority\n",
     "        self.resource_dir = None\n",
@@ -131,6 +156,7 @@
     "                    \"You must either pass in an AWS region name, or have a \"\n",
     "                    \"region name specified in your AWS config file\"\n",
     "                )\n",
+    "            \n",
     "\n",
     "    def put_data(self, key, binary_data):\n",
     "        self.s3.Object(self.bucket_name, key).put(Body=binary_data)\n",
@@ -150,7 +176,9 @@
     "        for s, m in ex_info[\"sources\"]:\n",
     "            abspath = os.path.join(base_dir, s)\n",
     "            store_path, md5sum = self.find_or_save(abspath, self.source_dir)\n",
-    "            source_info.append([s, os.path.relpath(store_path, self.experiment_dir)])\n",
+    "            source_info.append(\n",
+    "                [s, os.path.relpath(store_path, self.experiments_key_prefix)]\n",
+    "            )\n",
     "        return source_info\n",
     "\n",
     "    def find_or_save(self, filename, store_dir):\n",
@@ -165,7 +193,7 @@
     "    def _determine_run_dir(self, _id):\n",
     "        if _id is None:\n",
     "            path_subdirs = list_s3_subdirs(\n",
-    "                self.s3, self.bucket_name, s3_join(self.experiment_dir, \"runs\")\n",
+    "                self.s3, self.bucket_name, s3_join(self.experiments_key, \"runs\")\n",
     "            )\n",
     "            if not path_subdirs:\n",
     "                max_run_id = 0\n",
@@ -174,17 +202,17 @@
     "                if not integer_directories:\n",
     "                    max_run_id = 0\n",
     "                else:\n",
-    "                    # If there are directories under experiment_dir that aren't\n",
+    "                    # If there are directories under experiments_key that aren't\n",
     "                    # numeric run directories, ignore those\n",
     "                    max_run_id = max(integer_directories)\n",
     "\n",
     "            _id = max_run_id + 1\n",
     "\n",
-    "        self.runs_dir = s3_join(self.experiment_dir, \"runs\", str(_id))\n",
-    "        self.metrics_dir = s3_join(self.experiment_dir, \"metrics\", str(_id))\n",
-    "        self.artifacts_dir = s3_join(self.experiment_dir, \"artifacts\", str(_id))\n",
-    "        self.resource_dir = s3_join(self.experiment_dir, \"resources\", str(_id))\n",
-    "        self.source_dir = s3_join(self.experiment_dir, \"sources\", str(_id))\n",
+    "        self.runs_dir = s3_join(self.experiments_key, \"runs\", str(_id))\n",
+    "        self.metrics_dir = s3_join(self.experiments_key, \"metrics\", str(_id))\n",
+    "        self.artifacts_dir = s3_join(self.experiments_key, \"artifacts\", str(_id))\n",
+    "        self.resource_dir = s3_join(self.experiments_key, \"resources\", str(_id))\n",
+    "        self.source_dir = s3_join(self.experiments_key, \"sources\", str(_id))\n",
     "\n",
     "        self.dirs = (\n",
     "            self.runs_dir,\n",
@@ -301,8 +329,9 @@
     "    def __eq__(self, other):\n",
     "        if isinstance(other, AWSLakeObserver):\n",
     "            return (\n",
-    "                self.bucket == other.bucket\n",
-    "                and self.experiment_dir == other.experiment_dir\n",
+    "                self.experiment_name == other.experiment_name \n",
+    "                and self.bucket_name == other.bucket_name\n",
+    "                and self.experiments_key_prefix == other.experiments_key_prefix\n",
     "            )\n",
     "        else:\n",
     "            return False"
@@ -310,53 +339,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
+    "experiment_name = \"observer_test\"\n",
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
-    "test_key_prefix = \"discovery/experiments/test/\"\n",
-    "experiment_dir = f\"{test_key_prefix}observer_test\"\n",
+    "experiments_key_prefix = \"discovery/experiments/test/\"\n",
     "missing_bucket = \"s3bawspprwe1\"\n",
     "invalid_bucket = \"some bucket\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    observer = AWSLakeObserver(bucket_name, experiment_dir)\n",
-    "except ValueError as ve:\n",
-    "    assert \"region\" in str(ve).lower()\n",
-    "observer = AWSLakeObserver(bucket_name, experiment_dir, region=\"eu-west-1\")\n",
+    "observer = AWSLakeObserver(experiment_name)\n",
+    "observer = AWSLakeObserver(\n",
+    "    experiment_name, experiments_key_prefix=experiments_key_prefix\n",
+    ")\n",
+    "observer = AWSLakeObserver(\n",
+    "    experiment_name, bucket_name, experiments_key_prefix, region=\"eu-west-1\"\n",
+    ")\n",
     "assert observer.region == \"eu-west-1\"\n",
     "# Do not check for missing bucket yet\n",
-    "observer = AWSLakeObserver(missing_bucket, experiment_dir, region=\"eu-west-1\")\n",
+    "observer = AWSLakeObserver(\n",
+    "    experiment_name, missing_bucket, experiments_key_prefix, region=\"eu-west-1\"\n",
+    ")\n",
     "try:\n",
-    "    observer = AWSLakeObserver(invalid_bucket, experiment_dir, region=\"eu-west-1\")\n",
+    "    observer = AWSLakeObserver(\n",
+    "        experiment_name, invalid_bucket, experiments_key_prefix, region=\"eu-west-1\"\n",
+    "    )\n",
     "except ValueError as ve:\n",
     "    assert \"naming\" in str(ve).lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sacred import Experiment\n",
     "from sacred.run import Run\n",
     "\n",
-    "ex = Experiment(\"test-lake-obs\", interactive=True)\n",
-    "\n",
+    "ex_name = \"test_lake_obs\"\n",
+    "ex = Experiment(\"test_lake_obs\", interactive=True)\n",
     "\n",
     "obs = AWSLakeObserver(\n",
+    "    experiment_name=ex_name,\n",
     "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
-    "    experiment_dir=experiment_dir,\n",
-    "    region=\"eu-west-1\",\n",
+    "    experiments_key_prefix=experiments_key_prefix,\n",
     ")\n",
     "\n",
     "ex.observers.append(obs)\n",
@@ -365,7 +400,7 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    \"Hello %s!\" % recipient\n",
+    "    message = \"Hello %s!\" % recipient\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -379,16 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:test-lake-obs:Running command 'my_main'\n",
-      "INFO:test-lake-obs:Started run with ID \"12\"\n",
-      "INFO:test-lake-obs:Completed after 0:00:01\n"
+      "INFO:test_lake_obs:Running command 'my_main'\n",
+      "INFO:test_lake_obs:Started run with ID \"1\"\n",
+      "INFO:test_lake_obs:Completed after 0:00:01\n"
      ]
     },
     {
@@ -401,10 +436,10 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7fa906083cd0>"
+       "<sacred.run.Run at 0x7f3c0be4bb90>"
       ]
      },
-     "execution_count": null,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,17 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex = Experiment(\"test-empty\", interactive=True)\n",
-    "\n",
+    "ex_name = \"test-empty\"\n",
+    "ex = Experiment(ex_name, interactive=True)\n",
     "\n",
     "obs = AWSLakeObserver(\n",
+    "    experiment_name=ex_name,\n",
     "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
-    "    experiment_dir=f\"{test_key_prefix}test_empty\",\n",
-    "    region=\"eu-west-1\",\n",
+    "    experiments_key_prefix=f\"{experiments_key_prefix}test_empty\",\n",
     ")\n",
     "\n",
     "ex.observers.append(obs)\n",
@@ -436,7 +471,7 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    \"Hello %s!\" % recipient\n",
+    "    message = \"Hello %s!\" % recipient\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -446,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +489,7 @@
      "output_type": "stream",
      "text": [
       "INFO:test-empty:Running command 'my_main'\n",
-      "INFO:test-empty:Started run with ID \"6\"\n",
+      "INFO:test-empty:Started run with ID \"1\"\n",
       "INFO:test-empty:Completed after 0:00:00\n"
      ]
     },
@@ -468,10 +503,10 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7fa9052e3590>"
+       "<sacred.run.Run at 0x7f3c18065590>"
       ]
      },
-     "execution_count": null,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,6 +530,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
