--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -500,9 +500,7 @@
     "        and word_scores_in_range\n",
     "        and as_many_items_as_topics\n",
     "    )\n",
-    "    artifacts = [\n",
-    "        os.path.join(Path(\".\").resolve(), \"test\", \"dataframe_artifact.csv\")\n",
-    "    ]\n",
+    "    artifacts = [os.path.join(Path(\".\").resolve(), \"test\", \"dataframe_artifact.csv\")]\n",
     "    metrics = [(\"mae\", 100, 0), (\"mae\", 67, 1), (\"mae\", 32, 2)]\n",
     "    results = {\n",
     "        \"word_summaries\": word_summaries,\n",
@@ -603,18 +601,6 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
