Switched to using flow id as experiment id

--- a/nbs/experiment/lake_experiment_loader.ipynb
+++ b/nbs/experiment/lake_experiment_loader.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp lake_experiment_loader"
+    "# default_exp experiment.lake_experiment_loader"
    ]
   },
   {
@@ -489,6 +489,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
