--- a/nbs/experiment/lake_observer.ipynb
+++ b/nbs/experiment/lake_observer.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp lake_observer"
+    "# default_exp experiment.lake_observer"
    ]
   },
   {
@@ -24,18 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +45,6 @@
     "\n",
     "import boto3\n",
     "import pandas as pd\n",
-    "from nbdev import Config\n",
     "from sacred.dependencies import get_digest\n",
     "from sacred.observers.base import RunObserver\n",
     "from sacred.serializer import flatten\n",
@@ -69,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +79,7 @@
     "\n",
     "    def __init__(\n",
     "        self,\n",
+    "        project,\n",
     "        experiment_name,\n",
     "        bucket_name=None,\n",
     "        experiments_key_prefix=None,\n",
@@ -117,18 +108,23 @@
     "            buckets. Needs to be either set here or configured in your AWS\n",
     "        \"\"\"\n",
     "        self.experiment_name = experiment_name\n",
-    "        config = Config()\n",
-    "        self.bucket_name = config.bucket if bucket_name is None else bucket_name\n",
+    "        if bucket_name is None:\n",
+    "            try:\n",
+    "                bucket_name = os.environ['SCIFLOW_BUCKET']\n",
+    "            except KeyError:\n",
+    "                raise ValueError('Bucket name must be provided or set using SCIFLOW_BUCKET env')\n",
+    "        self.bucket_name = os.environ['SCIFLOW_BUCKET'] if bucket_name is None else bucket_name\n",
     "        if not is_valid_bucket(self.bucket_name):\n",
     "            raise ValueError(\n",
     "                \"Your chosen bucket name doesn't follow AWS bucket naming rules\"\n",
     "            )\n",
     "        self.experiments_key_prefix = (\n",
-    "            f\"{config.lib_name}/experiments\"\n",
+    "            f\"{project}/experiments\"\n",
     "            if experiments_key_prefix is None\n",
     "            else experiments_key_prefix\n",
     "        )\n",
     "        self.experiments_key = s3_join(self.experiments_key_prefix, self.experiment_name)\n",
+    "        self.experiment_dir = s3_join(self.bucket_name, self.experiments_key)\n",
     "        self.bucket_name = bucket_name\n",
     "        self.priority = priority\n",
     "        self.resource_dir = None\n",
@@ -190,29 +186,29 @@
     "            self.save_file(self.source_dir, filename, store_path)\n",
     "        return store_path, md5sum\n",
     "\n",
-    "    def _determine_run_dir(self, _id):\n",
-    "        if _id is None:\n",
-    "            path_subdirs = list_s3_subdirs(\n",
-    "                self.s3, self.bucket_name, s3_join(self.experiments_key, \"runs\")\n",
-    "            )\n",
-    "            if not path_subdirs:\n",
-    "                max_run_id = 0\n",
-    "            else:\n",
-    "                integer_directories = [int(d) for d in path_subdirs if d.isdigit()]\n",
-    "                if not integer_directories:\n",
-    "                    max_run_id = 0\n",
-    "                else:\n",
-    "                    # If there are directories under experiments_key that aren't\n",
-    "                    # numeric run directories, ignore those\n",
-    "                    max_run_id = max(integer_directories)\n",
+    "    def _determine_run_dir(self, run_id):\n",
+    "#         if _id is None:\n",
+    "#             path_subdirs = list_s3_subdirs(\n",
+    "#                 self.s3, self.bucket_name, s3_join(self.experiments_key, \"runs\")\n",
+    "#             )\n",
+    "#             if not path_subdirs:\n",
+    "#                 max_run_id = 0\n",
+    "#             else:\n",
+    "#                 integer_directories = [int(d) for d in path_subdirs if d.isdigit()]\n",
+    "#                 if not integer_directories:\n",
+    "#                     max_run_id = 0\n",
+    "#                 else:\n",
+    "#                     # If there are directories under experiments_key that aren't\n",
+    "#                     # numeric run directories, ignore those\n",
+    "#                     max_run_id = max(integer_directories)\n",
     "\n",
-    "            _id = max_run_id + 1\n",
+    "#             _id = max_run_id + 1\n",
     "\n",
-    "        self.runs_dir = s3_join(self.experiments_key, \"runs\", str(_id))\n",
-    "        self.metrics_dir = s3_join(self.experiments_key, \"metrics\", str(_id))\n",
-    "        self.artifacts_dir = s3_join(self.experiments_key, \"artifacts\", str(_id))\n",
-    "        self.resource_dir = s3_join(self.experiments_key, \"resources\", str(_id))\n",
-    "        self.source_dir = s3_join(self.experiments_key, \"sources\", str(_id))\n",
+    "        self.runs_dir = s3_join(self.experiments_key, \"runs\", str(run_id))\n",
+    "        self.metrics_dir = s3_join(self.experiments_key, \"metrics\", str(run_id))\n",
+    "        self.artifacts_dir = s3_join(self.experiments_key, \"artifacts\", str(run_id))\n",
+    "        self.resource_dir = s3_join(self.experiments_key, \"resources\", str(run_id))\n",
+    "        self.source_dir = s3_join(self.experiments_key, \"sources\", str(run_id))\n",
     "\n",
     "        self.dirs = (\n",
     "            self.runs_dir,\n",
@@ -224,15 +220,13 @@
     "        for dir_to_check in self.dirs:\n",
     "            if objects_exist_in_dir(self.s3, self.bucket_name, dir_to_check):\n",
     "                raise FileExistsError(\n",
-    "                    \"S3 dir at {} already exists\".format(self.runs_dir)\n",
+    "                    \"S3 dir at {}/{} already exists\".format(self.bucket_name, dir_to_check)\n",
     "                )\n",
-    "\n",
-    "        return _id\n",
     "\n",
     "    def queued_event(\n",
     "        self, ex_info, command, host_info, queue_time, config, meta_info, _id\n",
     "    ):\n",
-    "        _id = self._determine_run_dir(_id)\n",
+    "        self._determine_run_dir(meta_info['run_id'])\n",
     "\n",
     "        self.run_entry = {\n",
     "            \"experiment\": dict(ex_info),\n",
@@ -252,8 +246,8 @@
     "    def started_event(\n",
     "        self, ex_info, command, host_info, start_time, config, meta_info, _id\n",
     "    ):\n",
-    "        _id = self._determine_run_dir(_id)\n",
-    "        self.experiment_id = _id\n",
+    "        self._determine_run_dir(meta_info['run_id'])\n",
+    "        self.experiment_id = meta_info['run_id']\n",
     "\n",
     "        ex_info[\"sources\"] = self.save_sources(ex_info)\n",
     "\n",
@@ -339,10 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "project = 'sciflow'\n",
     "experiment_name = \"observer_test\"\n",
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
     "experiments_key_prefix = \"discovery/experiments/test/\"\n",
@@ -352,25 +347,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "observer = AWSLakeObserver(experiment_name)\n",
+    "os.environ['SCIFLOW_BUCKET'] = bucket_name\n",
+    "observer = AWSLakeObserver(project, experiment_name)\n",
     "observer = AWSLakeObserver(\n",
-    "    experiment_name, experiments_key_prefix=experiments_key_prefix\n",
+    "    project, experiment_name, experiments_key_prefix=experiments_key_prefix\n",
     ")\n",
     "observer = AWSLakeObserver(\n",
-    "    experiment_name, bucket_name, experiments_key_prefix, region=\"eu-west-1\"\n",
+    "    project, experiment_name, bucket_name, experiments_key_prefix, region=\"eu-west-1\"\n",
     ")\n",
     "assert observer.region == \"eu-west-1\"\n",
     "# Do not check for missing bucket yet\n",
     "observer = AWSLakeObserver(\n",
-    "    experiment_name, missing_bucket, experiments_key_prefix, region=\"eu-west-1\"\n",
+    "    project, experiment_name, missing_bucket, experiments_key_prefix, region=\"eu-west-1\"\n",
     ")\n",
     "try:\n",
     "    observer = AWSLakeObserver(\n",
-    "        experiment_name, invalid_bucket, experiments_key_prefix, region=\"eu-west-1\"\n",
+    "        project, experiment_name, invalid_bucket, experiments_key_prefix, region=\"eu-west-1\"\n",
     "    )\n",
     "except ValueError as ve:\n",
     "    assert \"naming\" in str(ve).lower()"
@@ -378,17 +374,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sacred import Experiment\n",
     "from sacred.run import Run\n",
     "\n",
+    "from sciflow.s3_utils import delete_dir\n",
+    "s3 = boto3.resource(\"s3\")\n",
+    "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_lake_obs\")\n",
+    "\n",
+    "\n",
     "ex_name = \"test_lake_obs\"\n",
     "ex = Experiment(\"test_lake_obs\", interactive=True)\n",
     "\n",
     "obs = AWSLakeObserver(\n",
+    "    project, \n",
+    "    experiment_name=ex_name,\n",
+    "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
+    "    experiments_key_prefix=experiments_key_prefix,\n",
+    ")\n",
+    "\n",
+    "ex.observers.append(obs)\n",
+    "\n",
+    "@ex.config\n",
+    "def my_config():\n",
+    "    recipient = \"test\"\n",
+    "    message = \"Hello %s!\" % recipient\n",
+    "\n",
+    "\n",
+    "@ex.main\n",
+    "def my_main(message, _run: Run):\n",
+    "    _run.add_artifact(\"test/requirements-generated.txt\")\n",
+    "    _run.add_artifact(\"test/dataframe_artifact.csv\")\n",
+    "    _run.log_scalar(\"another one\", 9.12, 0)\n",
+    "    print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_id = str(uuid.uuid4()).replace('-', '_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:test_lake_obs:Running command 'my_main'\n",
+      "INFO:test_lake_obs:Started\n",
+      "INFO:test_lake_obs:Completed after 0:00:01\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello test!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sacred.run.Run at 0x7ff8649277d0>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# slow\n",
+    "\n",
+    "ex.run(meta_info={'run_id': sample_id})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/requirements-generated.txt\"))\n",
+    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/dataframe_artifact.csv\"))\n",
+    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/metrics/{sample_id}/metrics.csv\"))\n",
+    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/runs/{sample_id}/run.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex_name = \"test_empty\"\n",
+    "ex = Experiment(ex_name, interactive=True)\n",
+    "\n",
+    "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_empty\")\n",
+    "\n",
+    "obs = AWSLakeObserver(\n",
+    "    project, \n",
     "    experiment_name=ex_name,\n",
     "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
     "    experiments_key_prefix=experiments_key_prefix,\n",
@@ -405,25 +500,21 @@
     "\n",
     "@ex.main\n",
     "def my_main(message, _run: Run):\n",
-    "    _run.add_artifact(\"test/requirements-generated.txt\")\n",
-    "    _run.add_artifact(\"test/dataframe_artifact.csv\")\n",
-    "    _run.log_scalar(\"rsme\", 1.79, 0)\n",
-    "    _run.log_scalar(\"another one\", 9.12, 0)\n",
     "    print(message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:test_lake_obs:Running command 'my_main'\n",
-      "INFO:test_lake_obs:Started run with ID \"1\"\n",
-      "INFO:test_lake_obs:Completed after 0:00:01\n"
+      "INFO:test_empty:Running command 'my_main'\n",
+      "INFO:test_empty:Started\n",
+      "INFO:test_empty:Completed after 0:00:00\n"
      ]
     },
     {
@@ -436,10 +527,10 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7f3c0be4bb90>"
+       "<sacred.run.Run at 0x7ff857480fd0>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,74 +538,7 @@
    "source": [
     "# slow\n",
     "\n",
-    "ex.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ex_name = \"test-empty\"\n",
-    "ex = Experiment(ex_name, interactive=True)\n",
-    "\n",
-    "obs = AWSLakeObserver(\n",
-    "    experiment_name=ex_name,\n",
-    "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
-    "    experiments_key_prefix=f\"{experiments_key_prefix}test_empty\",\n",
-    ")\n",
-    "\n",
-    "ex.observers.append(obs)\n",
-    "\n",
-    "\n",
-    "@ex.config\n",
-    "def my_config():\n",
-    "    recipient = \"test\"\n",
-    "    message = \"Hello %s!\" % recipient\n",
-    "\n",
-    "\n",
-    "@ex.main\n",
-    "def my_main(message, _run: Run):\n",
-    "    print(message)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:test-empty:Running command 'my_main'\n",
-      "INFO:test-empty:Started run with ID \"1\"\n",
-      "INFO:test-empty:Completed after 0:00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello test!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<sacred.run.Run at 0x7f3c18065590>"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# slow\n",
-    "\n",
-    "ex.run()"
+    "ex.run(meta_info={'run_id': sample_id})"
    ]
   },
   {
